# mg3d

./: Doxyfile  Makefile.am  README.md  configure.in
docs/: mg3d-prog-guide-cn
include/: Makefile.am  mg3d.h  mg3dbase.h  mg3dcolor.h  mg3dmaths.h  mg3dmatrix.h
m4/CVS/: Entries  Repository  Root
src/: 3dmath.c  Makefile.am  clip3d.c  clip3df.c  colblend.c  color.c  gfx.c  graphics.c  poly3d.c  scene3d.c
src/c/: Makefile.am  cdefs15.h  cdefs16.h  cdefs24.h  cdefs32.h  cdefs8.h  cscan.h  cscan15.c  cscan16.c  cscan24.c  cscan32.c  cscan8.c  czscan.h  czscan15.c  czscan16.c  czscan24.c  czscan32.c  czscan8.c
src/include/: Makefile.am  mg3dgfx.h  mg3dintern.h  mg3drw.h
test/: Makefile.am  camera.c  exscn3d.c  mg3d.c  polygon3d.c  polygon3d8bit.c  polygon3dF8bit.c  polygon3df.c  quad3d.c  quad3d8bit.c  quad3dF8bit.c  quad3df.c  readme  scene_test.c  stars.c  test.c  testzbuf.c  triangle3d.c  triangle3d8bit.c  triangle3dF8bit.c  triangle3df.c  zbuffer.c
